--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Lexend:wght@400;600;700&display=swap");
 
 :root {
-  --color-main: #f68657;
+  --color-main: #984de5;
   --color-text: #383a3f;
   --color-dark: #1f2124;
   --color-gray: #677;
@@ -13,13 +13,13 @@
 }
 
 .dark {
-  --color-main: #f68657;
+  --color-main: #984de5;
   --color-text: #d6d1d1;
   --color-dark: #f5f6f7;
   --color-gray: #999;
-  --color-bg: #1f2124;
-  --color-lighter: #292a2c;
-  --color-white: #2e3235;
+  --color-bg: #0a0b1d;
+  --color-lighter: #222452;
+  --color-white: #11132c;
   --color-border: #252629;
 }
 
@@ -178,7 +178,7 @@ a {
 }
 
 .floating-button > svg {
-  fill: var(--color-bg);
+  fill: white;
 }
 
 /*==============================
