--- a/templates/login.html
+++ b/templates/login.html
@@ -109,7 +109,7 @@
         }
     </style>
     <!-- Custom styles for this template -->
-    <link href="signin.css" rel="stylesheet">
+    <!-- <link href="signin.css" rel="stylesheet"> -->
 </head>
 
 <body class="text-center">
